--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=http://backend-service-api:30008/api/tasks
+REACT_APP_BACKEND_URL=http://three-tier.svc.cluster.local:30008/api/tasks
