--- a/frontend.yml
+++ b/frontend.yml
@@ -7,6 +7,8 @@ metadata:
     role: frontend
 spec:
   replicas: 1
+  nodeSelector:
+    node-role.kubernetes.io/worker: ""
   selector:
     matchLabels:
       role: frontend
