--- a/frontend.yml
+++ b/frontend.yml
@@ -15,6 +15,8 @@ spec:
       labels:
         role: frontend
     spec:
+      nodeSelector:  # Add this section to specify node affinity
+        node-role.kubernetes.io/worker: ""  # Label of the worker node(s)
       containers:
       - name: frontend
         image: bmk53/three-tier-project:VERSION
@@ -29,7 +31,7 @@ metadata:
 spec:
   ports:
   - port: 3000
-    targetPort: 80
+    targetPort: 3000  # Adjusted to match container port
     protocol: TCP
     nodePort: 30005
   selector:
