--- a/nginx.conf
+++ b/nginx.conf
@@ -39,7 +39,7 @@ http {
            try_files $uri $uri/ /index.html;
            #try_files $uri $uri/ =404;
         }
-        location /api/tasks {
+        location /api/Tasks {
         proxy_pass http://44.222.228.51:30008;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
